--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="ngViewEffects">
 <head>
 	<meta charset="utf-8">
-	<title>ngView Animation Effects</title>
+	<title>Richard:profile</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="lib/prism/themes/prism.css" />
 	<link rel="stylesheet" href="css/app.css"/>
@@ -15,10 +15,10 @@
 
 		<div class="header">
 			<ul class="nav nav-pills pull-right">
-				<li ng-class="{active: isActive('/page/:pageId')}"><a href="#/page/1">Effects</a></li>
+				<li ng-class="{active: isActive('/page/:pageId')}"><a href="#/page/1">My actions</a></li>
 				<li ng-class="{active: isActive('/about')}"><a href="#/about">About</a></li>
 			</ul>
-			<h3 class="text-muted">AngularJS ngView Animation Effects</h3>
+			<h3 class="text-muted">Who is Muragijimana Richard?</h3>
 		</div>
 
 		<div class="jumbotron content" back-animation>
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class="row marketing">
-			<h4>Animation Effect</h4>
+			<h4>See more..choose your effect</h4>
 			<div class="col col-lg-6 col-md-6 col-sm-6">
 				<select class="form-control" ng-model="effect" ng-options="e.className as e.name for e in effects"></select>
 			</div>
@@ -49,7 +49,7 @@
 			<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52b2166468accf19"></script>
 			<!-- AddThis Button END -->
 
-			<p class="pull-left">&copy; Aliaksandr Astashenkau 2013</p>
+			<p class="pull-left">&copy; StrimUp&trade;2015</p>
 		</div>
 
 	</div>
